--- a/.github/workflows/update_docker_image.yaml
+++ b/.github/workflows/update_docker_image.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
       - name: Build
-        run: ./gradlew build]
+        run: ./gradlew build
 
       - name: Build image
         run: docker build -t test-image .
