--- a/.github/workflows/update_docker_image.yaml
+++ b/.github/workflows/update_docker_image.yaml
@@ -25,5 +25,11 @@ jobs:
       - name: Build image
         run: docker build -t test-image .
 
-      - name: Run docker-compose
-        run: docker-compose up
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: emilyyy0621
+          password: 93f963e6-8bc5-4bc4-888c-8a43b817098e
+
+      - name: Push image on repository
+        run: docker push emilyyy0621/testrepository:test-image
