--- a/.github/workflows/update_docker_image.yaml
+++ b/.github/workflows/update_docker_image.yaml
@@ -25,16 +25,16 @@ jobs:
       - name: Build
         run: ./gradlew build
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: emilyyy0621
-          password: 93f963e6-8bc5-4bc4-888c-8a43b817098e
+#      - name: Login to DockerHub
+#        uses: docker/login-action@v2
+#        with:
+#          username: emilyyy0621
+#          password: 93f963e6-8bc5-4bc4-888c-8a43b817098e
 
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
-        with:
-          push: true
+#        with:
+#          push: true
 
 #      - name: Build image
 #        run: docker build -t test-image .
