--- a/.github/workflows/update_docker_image.yaml
+++ b/.github/workflows/update_docker_image.yaml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+          fetch-depth: 0
       - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
@@ -27,17 +27,13 @@ jobs:
       - name: Build image
         run: docker build -t test-image .
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: emilyyy0621
-          password: 93f963e6-8bc5-4bc4-888c-8a43b817098e
-
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          push: true
-          tag: test-image
+          username: emilyyy0621
+          password: 93f963e6-8bc5-4bc4-888c-8a43b817098e
+          repository: emilyyy0621/testrepository
+          tags: test-image
 
 #name: Docker
 #on:
