--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,8 +12,8 @@ services:
       timeout: 20s
       retries: 10
   test:
-#    image: emilyyy0621/testrepository:test-image
-    image: test-image
+    image: emilyyy0621/testrepository:test-image
+#    image: test-image
     ports:
       - 8000:8080
     environment:
