push image to docker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
   test:
     image: emilyyy0621/testrepository:test-image
 #    image: test-image
+    pull_policy: always
     ports:
       - 8000:8080
     environment:
