--- a/.github/workflows/update_docker_image.yaml
+++ b/.github/workflows/update_docker_image.yaml
@@ -3,10 +3,6 @@ on:
   push:
     branches:
       - master
-  pull_request:
-    types: [opened, synchronize, reopened]
-  workflow_dispatch:
-
 jobs:
   build:
     name: Build
@@ -21,7 +17,8 @@ jobs:
           java-version: 17
       - name: Make gradlew executable
         run: chmod +x ./gradlew
-      - name: Build
+
+      - name: Build project
         run: ./gradlew build
 
       - name: Build image
@@ -38,59 +35,3 @@ jobs:
 
       - name: Push image on repository
         run: docker push emilyyy0621/testrepository:test-image
-
-#      - name: Push to Docker Hub
-#        uses: docker/build-push-action@v1
-#        with:
-#          username: emilyyy0621
-#          password: 93f963e6-8bc5-4bc4-888c-8a43b817098e
-#          repository: emilyyy0621/testrepository
-#          tags: test-image
-
-#name: Docker
-#on:
-#  push:
-#    branches:
-#      - master
-#  pull_request:
-#    types: [opened, synchronize, reopened]
-#jobs:
-#  build:
-#    name: Build
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0
-#
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v1
-#        with:
-#          java-version: 17
-#
-#      - name: Make gradlew executable
-#        run: chmod +x ./gradlew
-
-#      - name: Build
-#        run: ./gradlew build
-
-#      - name: Login to DockerHub
-#        uses: docker/login-action@v2
-#        with:
-#          username: emilyyy0621
-#          password: 93f963e6-8bc5-4bc4-888c-8a43b817098e
-
-#      - name: Push to Docker Hub
-#        uses: docker/build-push-action@v2
-#        with:
-#          push: true
-
-#      - name: Build image
-#        run: docker build -t test-image .
-#
-#      - name: Create tag
-#        run: docker tag test-image emilyyy0621/testrepository:test-image
-#
-#
-#      - name: Push image on repository
-#        run: docker push emilyyy0621/testrepository:test-image
